@@ -35,6 +35,8 @@ public class TestConfig implements CommandLineRunner {
         patientsRepository.deleteAll();
         hospitalizationHistoryRepository.deleteAll();
 
+
+
         Patients p1 = new Patients(null,"João Gomes","95554-3525", "16/12/1975");
         Patients p2 = new Patients(null,"Giva Jones","95554-3525", "16/12/1975");
         Patients p3 = new Patients(null,"Joel Silva","95554-3525", "16/12/1975");
@@ -44,9 +46,17 @@ public class TestConfig implements CommandLineRunner {
         Doctors d2 = new Doctors(2222L, "Renan Santos", 2, "Cardiologista", null);
         Doctors d3 = new Doctors(3333L, "Marcelo Dias", 2, "Oftalmologista", null);
         Doctors d4 = new Doctors(4444L, "Francisco Souza", 3, "Psiquiatra", null);
-        Doctors d5 = new Doctors(5555L, "Davi Campos", 3, "Penumologista", null);
+        Doctors d5 = new Doctors(5555L, "Davi Campos", 3, "Pneumologista", null);
 
         doctorsRepository.saveAll(Arrays.asList(d1,d2,d3,d4,d5));
+
+        HospitalizationHistory h1 = new HospitalizationHistory(p1.getpatientId(),"02/11/2016 - 18:40","05/11/2016 - 11:35",
+                "Flu problem", Arrays.asList(d5));
+        HospitalizationHistory h2 = new HospitalizationHistory(p1.getpatientId(),"29/09/2011 - 19:40","05/10/2011 - 11:35",
+                "Heart problem", Arrays.asList(d2));
+        /*HospitalizationHistory h3 = new HospitalizationHistory(p1.getpatientId(),"25/3/2010 - 19:50","28/3/2010 - 15:35",
+                "Fractured bone", Arrays.asList(d1));*/
+        hospitalizationHistoryRepository.saveAll(Arrays.asList(h1,h2));
 
 
 
@@ -71,14 +81,12 @@ public class TestConfig implements CommandLineRunner {
                 "Flu problem", 5555L,p3.getIdPatient());*/
 
 
-        HospitalizationHistory h1 = new HospitalizationHistory(p1.getIdPatient(),"02/11/2016 - 18:40","05/11/2016 - 11:35",
-                "Flu problem", Arrays.asList(d5));
-        HospitalizationHistory h2 = new HospitalizationHistory(p1.getIdPatient(),"29/09/2011 - 19:40","05/10/2011 - 11:35",
-                "Heart problem", Arrays.asList(d2));
 
 
 
-        hospitalizationHistoryRepository.saveAll(Arrays.asList(h1,h2));
+
+        //hospitalizationHistoryRepository.saveAll(Arrays.asList(h1));
+
 
 
 
@@ -90,6 +98,8 @@ public class TestConfig implements CommandLineRunner {
 
         p1.getHospitalizationHistoryList().add(h1);
         p1.getHospitalizationHistoryList().add(h2);
+        //p1.getHospitalizationHistoryList().add(h3);
+
 
 
         /*p1.getHospitalizationHistoryList().add(h2);
@@ -132,8 +142,8 @@ public class TestConfig implements CommandLineRunner {
 
 
 
-        hospitalizationHistoryRepository.saveAll(Arrays.asList(h1));
-        patientsRepository.saveAll(List.of(p1,p2,p3));
+        //hospitalizationHistoryRepository.saveAll(Arrays.asList(h1,h2));
+        patientsRepository.saveAll(List.of(p1));
 
 
 
